--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             padding: 0 104px;
             padding-top: 63px;
             padding-bottom: 63px;
-            border-radius: 90px;
-            font-size: 107.5pt;
+            border-radius: 83px;
+            font-size: 100pt;
             color: #666666;
             white-space: nowrap;
             font-weight: 700;
@@ -265,9 +265,6 @@
             // Get the computed style of the tag element
             const tagStyle = window.getComputedStyle(tagElement);
             const borderRadius = parseInt(tagStyle.borderRadius);
-            const font = tagStyle.font;
-            const color = tagStyle.color;
-
 
             // Draw the tag background onto the canvas with rounded corners
             ctx.fillStyle = tagStyle.backgroundColor;
@@ -281,8 +278,8 @@
 
 
             // Draw the tag text onto the canvas
-            ctx.font = font;
-            ctx.fillStyle = color;
+            ctx.font = tagStyle.font;
+            ctx.fillStyle = tagStyle.color;
             ctx.textAlign = 'center';
             ctx.textBaseline = 'middle';
             const text = tagElement.textContent;
@@ -319,19 +316,18 @@
          * @param {number} radius The radius of the rounded corners.
          */
         function roundRect(ctx, x, y, width, height, radius) {
-            const r = Math.min(radius, width / 2, height / 2);
-             // ctx.scale(3,3); // Removed scaling here, do it once for the whole canvas
-            ctx.beginPath();
-            ctx.moveTo(x + r, y);
-            ctx.lineTo(x + width - r, y);
-            ctx.quadraticCurveTo(x + width, y, x + width, y + r);
-            ctx.lineTo(x + width, y + height - r);
-            ctx.quadraticCurveTo(x + width, y + height, x + width - r, y + height);
-            ctx.lineTo(x + r, y + height);
-            ctx.quadraticCurveTo(x, y + height, x, y + height - r);
-            ctx.lineTo(x, y + r);
-            ctx.quadraticCurveTo(x, y, x + r, y);
-            ctx.closePath();
+          const r = Math.min(radius, width / 2, height / 2);
+          ctx.beginPath();
+          ctx.moveTo(x + r, y);
+          ctx.lineTo(x + width - r, y);
+          ctx.quadraticCurveTo(x + width, y, x + width, y + r);
+          ctx.lineTo(x + width, y + height - r);
+          ctx.quadraticCurveTo(x + width, y + height, x + width - r, y + height);
+          ctx.lineTo(x + r, y + height);
+          ctx.quadraticCurveTo(x, y + height, x, y + height - r);
+          ctx.lineTo(x, y + r);
+          ctx.quadraticCurveTo(x, y, x + r, y);
+          ctx.closePath();
         }
 
         textInput.addEventListener('keypress', function(e) {
