--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             padding: 0 104px;
             padding-top: 63px;
             padding-bottom: 63px;
-            border-radius: 83px;
-            font-size: 100pt;
+            border-radius: 90px;
+            font-size: 105pt;
             color: #666666;
             white-space: nowrap;
             font-weight: 700;
@@ -248,15 +248,13 @@
             const ctx = canvas.getContext('2d');
             const tagElement = document.getElementById('tag');
 
-            // Calculate the size of the tag element, and increase it for better resolution
-            const width = tagElement.offsetWidth * 3;  // Triple the pixel density
-            const height = tagElement.offsetHeight * 3;
+            // Calculate the size of the tag element
+            const width = tagElement.offsetWidth;
+            const height = tagElement.offsetHeight;
 
             // Set the canvas dimensions to match the tag element
             canvas.width = width;
             canvas.height = height;
-            canvas.style.width = tagElement.offsetWidth + 'px'; //keep display size the same
-            canvas.style.height = tagElement.offsetHeight + 'px';
 
 
             // Set a transparent background for the canvas
@@ -270,7 +268,7 @@
             ctx.fillStyle = tagStyle.backgroundColor;
             if (borderRadius > 0) {
                 // Create a rounded rectangle path
-                roundRect(ctx, 0, 0, width, height, borderRadius * 3); // Multiply borderRadius by 3 for increased size
+                roundRect(ctx, 0, 0, width, height, borderRadius);
                 ctx.fill();
             } else {
                 ctx.fillRect(0, 0, canvas.width, canvas.height);
@@ -285,8 +283,7 @@
             const text = tagElement.textContent;
             const x = canvas.width / 2;
             const y = canvas.height / 2;
-            ctx.scale(3,3);
-            ctx.fillText(text, x/3, y/3);
+            ctx.fillText(text, x, y);
 
             // Create a download link for the PNG image
             const link = document.createElement('a');
