--- a/index.html
+++ b/index.html
@@ -249,12 +249,14 @@
             const tagElement = document.getElementById('tag');
 
             // Calculate the size of the tag element
-            const width = tagElement.offsetWidth;
-            const height = tagElement.offsetHeight;
+            const width = Math.round(tagElement.offsetWidth);
+            const height = Math.round(tagElement.offsetHeight);
 
             // Set the canvas dimensions to match the tag element
             canvas.width = width;
             canvas.height = height;
+            canvas.style.width = width + 'px';
+            canvas.style.height = height + 'px';
 
 
             // Set a transparent background for the canvas
@@ -263,9 +265,13 @@
             // Get the computed style of the tag element
             const tagStyle = window.getComputedStyle(tagElement);
             const borderRadius = parseInt(tagStyle.borderRadius);
+            const font = tagStyle.font;
+            const color = tagStyle.color;
+            const backgroundColor = tagStyle.backgroundColor;
+
 
             // Draw the tag background onto the canvas with rounded corners
-            ctx.fillStyle = tagStyle.backgroundColor;
+            ctx.fillStyle = backgroundColor;
             if (borderRadius > 0) {
                 // Create a rounded rectangle path
                 roundRect(ctx, 0, 0, width, height, borderRadius);
@@ -276,8 +282,8 @@
 
 
             // Draw the tag text onto the canvas
-            ctx.font = tagStyle.font;
-            ctx.fillStyle = tagStyle.color;
+            ctx.font = font;
+            ctx.fillStyle = color;
             ctx.textAlign = 'center';
             ctx.textBaseline = 'middle';
             const text = tagElement.textContent;
@@ -313,18 +319,18 @@
          * @param {number} radius The radius of the rounded corners.
          */
         function roundRect(ctx, x, y, width, height, radius) {
-          const r = Math.min(radius, width / 2, height / 2);
-          ctx.beginPath();
-          ctx.moveTo(x + r, y);
-          ctx.lineTo(x + width - r, y);
-          ctx.quadraticCurveTo(x + width, y, x + width, y + r);
-          ctx.lineTo(x + width, y + height - r);
-          ctx.quadraticCurveTo(x + width, y + height, x + width - r, y + height);
-          ctx.lineTo(x + r, y + height);
-          ctx.quadraticCurveTo(x, y + height, x, y + height - r);
-          ctx.lineTo(x, y + r);
-          ctx.quadraticCurveTo(x, y, x + r, y);
-          ctx.closePath();
+            const r = Math.min(radius, width / 2, height / 2);
+            ctx.beginPath();
+            ctx.moveTo(x + r, y);
+            ctx.lineTo(x + width - r, y);
+            ctx.quadraticCurveTo(x + width, y, x + width, y + r);
+            ctx.lineTo(x + width, y + height - r);
+            ctx.quadraticCurveTo(x + width, y + height, x + width - r, y + height);
+            ctx.lineTo(x + r, y + height);
+            ctx.quadraticCurveTo(x, y + height, x, y + height - r);
+            ctx.lineTo(x, y + r);
+            ctx.quadraticCurveTo(x, y, x + r, y);
+            ctx.closePath();
         }
 
         textInput.addEventListener('keypress', function(e) {
