--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
             '#fef7e0': '#fcc40a',
             '#e6f4ea': '#016f38',
             '#e5f7fb': '#007787',
+            '#e3f2fc': '#004870',
             '#e7f0fe': '#006bd3',
             '#f3e8fd': '#8625ca',
-            '#fde7f3': '#b7076c',
-            '#ffebff': '#c454c4'
+            '#fde7f3': '#b7076c'
         };
 
         let selectedColor = '#f0f3f4';
@@ -325,3 +325,4 @@
     </script>
 </body>
 </html>
+
